@@ -52,6 +52,7 @@ Release 0.21.0 - Unreleased
    HBASE-1827  Add disabling block cache scanner flag to the shell
    HBASE-1835  Add more delete tests
    HBASE-1574  Client and server APIs to do batch deletes
+   HBASE-1833  hfile.main fixes
 
   OPTIMIZATIONS
 
